--- a/discord_twitter_webhooks/templates/add/1_feed_details.html
+++ b/discord_twitter_webhooks/templates/add/1_feed_details.html
@@ -1,64 +1,52 @@
 <div class="p-2 border border-dark" id="feed_details">
-  <h3>Feed Details</h3>
-  {# Group name #}
-  <div class="row pb-2">
-    {% if not modifying %} {# We can't change the name of a group #}
-    <label for="name" class="col-sm-1 col-form-label">Name</label>
-    <div class="col-sm-11">
-      <input
-        name="name"
-        type="text"
-        class="form-control bg-dark border-dark text-muted"
-        id="name"
-      />
-      <div id="name_help" class="form-text">
-        A name to identify this group. Can be anything you want.
-      </div>
+    <h3>Feed Details</h3>
+    {# Group name #}
+    <div class="row pb-2">
+        <label for="name" class="col-sm-1 col-form-label">Name</label>
+        <div class="col-sm-11">
+            <input
+                    name="name"
+                    type="text"
+                    class="form-control bg-dark border-dark text-muted"
+                    id="name"
+                    {% if settings.name %}value="{{ settings.name }}"{% endif %}
+            />
+            <div id="name_help" class="form-text">
+                A name to identify this group. Can be anything you want.
+            </div>
+        </div>
     </div>
-    {% endif %}
-  </div>
 
-  {# Twitter usernames #}
-  <div class="row pb-2">
-    <label for="usernames" class="col-sm-1 col-form-label">Usernames</label>
-    <div class="col-sm-11">
+    {# Twitter usernames #}
+    <div class="row pb-2">
+        <label for="usernames" class="col-sm-1 col-form-label">Usernames</label>
+        <div class="col-sm-11">
       <textarea
-        name="usernames"
-        class="form-control bg-dark border-dark text-muted"
-        id="usernames"
-        rows="3"
-      >{{ settings.usernames }}</textarea>
-      <div id="usernames_help" class="form-text">
-        Twitter usernames to follow, separate each webhook with a new line. You
-        can add new line with <code>Shift+Enter</code>.
-      </div>
+              name="usernames"
+              class="form-control bg-dark border-dark text-muted"
+              id="usernames"
+              rows="3"
+      >{% for name in settings.usernames %}{{ name }}{% if not loop.last %}&#10;{% endif %}{% endfor %}</textarea>
+            <div id="usernames_help" class="form-text">
+                Twitter usernames to follow, separate each webhook with a new line. You can add new line with <code>Shift+Enter</code>.
+            </div>
+        </div>
     </div>
-  </div>
 
-  {# Webhooks #}
-  <div class="row pb-2">
-    <label for="webhooks" class="col-sm-1 col-form-label">Webhook URLs</label>
-    <div class="col-sm-11">
+    {# Webhooks #}
+    <div class="row pb-2">
+        <label for="webhooks" class="col-sm-1 col-form-label">Webhook URLs</label>
+        <div class="col-sm-11">
       <textarea
-        name="webhooks"
-        class="form-control bg-dark border-dark text-muted"
-        id="url"
-        rows="3"
-      >{{ settings.webhooks }}</textarea>
-      <div id="webhooks_help" class="form-text">
-        Discord webhook URLs to send tweets to, separated by newlines. Add new
-        line with <code>Shift+Enter</code>.
-        <br />
-        Read more about webhooks
-        <a
-          class="text-muted"
-          href="https://support.discord.com/hc/en-us/articles/228383668-Intro-to-Webhooks"
-          >here</a
-        >.
-        <br />
-        Right click channel in Discord -> Integrations -> Webhooks -> Create
-        Webhook
-      </div>
+              name="webhooks"
+              class="form-control bg-dark border-dark text-muted"
+              id="webhooks"
+              rows="3"
+      >{% for url in settings.webhooks %}{{ url }}{% if not loop.last %}&#10;{% endif %}{% endfor %}</textarea>
+            <div id="webhooks_help" class="form-text">
+                Discord webhook URLs to send tweets to, separated by newlines. Add new line with
+                <code>Shift+Enter</code>.
+            </div>
+        </div>
     </div>
-  </div>
 </div>
