--- a/discord_twitter_webhooks/templates/add/3_how_to_send.html
+++ b/discord_twitter_webhooks/templates/add/3_how_to_send.html
@@ -1,36 +1,36 @@
 <div class="p-2 border border-dark" id="how_to_send">
-  <h3>How to send</h3>
-  {# Send embed #}
-  <div class="form-check form-switch">
-    <input class="form-check-input"
-           type="checkbox"
-           role="switch"
-           name="send_embed"
-           id="send_embed"
-           {% if settings.send_embed %}checked{% endif %}
-           value="True"/>
-    <label class="form-check-label" for="send_embed">Send Embed?</label>
-  </div>
-  {# Send text #}
-  <div class="form-check form-switch">
-    <input class="form-check-input"
-           type="checkbox"
-           role="switch"
-           name="send_text"
-           id="send_text"
-           {% if settings.send_text %}checked{% endif %}
-           value="True"/>
-    <label class="form-check-label" for="send_text">Send Text?</label>
-  </div>
-  {# Send only link #}
-  <div class="form-check form-switch">
-    <input class="form-check-input"
-           type="checkbox"
-           role="switch"
-           name="send_only_link"
-           id="send_only_link"
-           {% if settings.send_only_link %}checked{% endif %}
-           value="True" />
-    <label class="form-check-label" for="send_only_link">Send Link?</label>
-  </div>
+    <h3>How to send</h3>
+    {# Send embed #}
+    <div class="form-check form-switch">
+        <input class="form-check-input"
+               type="checkbox"
+               role="switch"
+               name="send_as_embed"
+               id="send_as_embed"
+               {% if settings.send_as_embed %}checked{% endif %}
+               value="True"/>
+        <label class="form-check-label" for="send_as_embed">Send as embed?</label>
+    </div>
+    {# Send text #}
+    <div class="form-check form-switch">
+        <input class="form-check-input"
+               type="checkbox"
+               role="switch"
+               name="send_as_text"
+               id="send_as_text"
+               {% if settings.send_as_text %}checked{% endif %}
+               value="True"/>
+        <label class="form-check-label" for="send_as_text">Send as text?</label>
+    </div>
+    {# Send only link #}
+    <div class="form-check form-switch">
+        <input class="form-check-input"
+               type="checkbox"
+               role="switch"
+               name="send_as_link"
+               id="send_as_link"
+               {% if settings.send_as_link %}checked{% endif %}
+               value="True"/>
+        <label class="form-check-label" for="send_as_link">Send as a link?</label>
+    </div>
 </div>
