--- a/discord_twitter_webhooks/templates/base.html
+++ b/discord_twitter_webhooks/templates/base.html
@@ -31,8 +31,8 @@
             {% endblock content %}
             <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
                 <p class="col-md-4 mb-0 text-muted d-none d-md-block">
-                    Made by
-                    <a class="text-muted" href="https://github.com/TheLovinator1">TheLovinator</a> with help from
+                    Made by:
+                    <br/><a class="text-muted" href="https://github.com/TheLovinator1">TheLovinator</a>
                     <br/><a class="text-muted" href="https://github.com/thebetauser">h1pp0</a>
                     <br/><a class="text-muted" href="https://github.com/dziban303">Dziban303</a>
                     <br/><a class="text-muted" href="https://github.com/accik">Akseli</a>
