Add a translation feature
This fixes #78

--- a/discord_twitter_webhooks/templates/feed.html
+++ b/discord_twitter_webhooks/templates/feed.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 {% block header %}
     {% block title %}
-        Modify {{ group_name }}
+        Add a feed
     {% endblock title %}
 {% endblock header %}
 {% block content %}
     <script src="{{ url_for('static', path='/add.js') }}"></script>
-    <form name="modify" action="{{ url_for('add_post') }}" method="post">
+    <form name="add" action="{{ url_for('add_post') }}" method="post">
         <input type="hidden" id="uuid" name="uuid" value="{{ settings.uuid }}"/>
         {% include "add/1_feed_details.html" %}
         <br/>
@@ -18,9 +18,11 @@
         <br/>
         {% include "add/5_send_link.html" %}
         <br/>
+        {% include "add/6_translate.html" %}
+        <br/>
         {% include "add/8_other.html" %}
         <div class="d-md-flex">
-            <button class="btn btn-dark btn-sm">Modify {{ group_name }}</button>
+            <button class="btn btn-dark btn-sm">Add feed</button>
         </div>
     </form>
 {% endblock content %}
