--- a/discord_twitter_webhooks/templates/settings.html
+++ b/discord_twitter_webhooks/templates/settings.html
@@ -35,6 +35,21 @@
                     </div>
                 </div>
             </div>
+            {# DeepL Auth Key #}
+            <div class="row pb-2">
+                <label for="deepL_auth_key" class="col-sm-1 col-form-label">DeepL auth key</label>
+                <div class="col-sm-11">
+                    <input name="deepL_auth_key"
+                           type="text"
+                           value="{%- if settings.deepL_auth_key -%}{{ settings.deepL_auth_key }}{%- endif -%}"
+                           class="form-control bg-dark border-dark text-muted"
+                           id="deepL_auth_key"/>
+                    <div id="deepL_auth_key_help" class="form-text">
+                        DeepL Auth Key to use for translations. Can be found <a class="text-muted"
+                                                                                href="https://www.deepl.com/account/summary">here</a>.
+                    </div>
+                </div>
+            </div>
             {# Error webhook #}
             <div class="row pb-2">
                 <label for="error_webhook" class="col-sm-1 col-form-label">Error webhook</label>
