--- a/discord_twitter_webhooks/templates/settings.html
+++ b/discord_twitter_webhooks/templates/settings.html
@@ -30,7 +30,7 @@
                         I highly recommend using your own instance, it is very easy to set up
                         and you can find instructions <a class="text-muted" href="">here</a>.
                         <br/>
-                        It will be faster, more private and you won't clog down the public
+                        It will be faster, more private, and you won't clog down the public
                         instance.
                     </div>
                 </div>
