--- a/discord_twitter_webhooks/templates/add/8_other.html
+++ b/discord_twitter_webhooks/templates/add/8_other.html
@@ -2,6 +2,7 @@
     <h3>Other</h3>
     {# Unescape HTML #}
     <div class="form-check form-switch">
+        <label class="form-check-label" for="unescape_html">Unescape HTML</label>
         <input class="form-check-input"
                type="checkbox"
                role="switch"
@@ -10,7 +11,6 @@
                value="True"
                {% if settings.unescape_html %}checked{% endif %}
         />
-        <label class="form-check-label" for="unescape_html">Unescape HTML</label>
         <div id="unescape_html_help" class="form-text">
             Whether or not you want to unescape HTML. For example, &amp;amp; becomes
             &.
@@ -19,6 +19,7 @@
 
     {# Remove UTM #}
     <div class="form-check form-switch">
+        <label class="form-check-label" for="remove_utm">Remove UTM params</label>
         <input class="form-check-input"
                type="checkbox"
                role="switch"
@@ -27,7 +28,6 @@
                value="True"
                {% if settings.remove_utm %}checked{% endif %}
         />
-        <label class="form-check-label" for="remove_utm">Remove UTM params</label>
         <div id="remove_utm_help" class="form-text">
             Whether or not you want to remove <a class="text-muted"
                                                  href="https://en.wikipedia.org/wiki/UTM_parameters">UTM parameters </a>
@@ -37,6 +37,7 @@
 
     {# Remove copyright symbols #}
     <div class="form-check form-switch">
+        <label class="form-check-label" for="remove_copyright">Remove &copy;, &reg;, and &trade;</label>
         <input class="form-check-input"
                type="checkbox"
                role="switch"
@@ -45,7 +46,6 @@
                value="True"
                {% if settings.remove_copyright %}checked{% endif %}
         />
-        <label class="form-check-label" for="remove_utm">Remove &copy;, &reg;, and &trade;</label>
         <div id="remove_copyright_help" class="form-text">Whether or not you want to remove &copy;, &reg;, and
             &trade;.
         </div>
