--- a/discord_twitter_webhooks/templates/feed.html
+++ b/discord_twitter_webhooks/templates/feed.html
@@ -5,22 +5,22 @@
     {% endblock title %}
 {% endblock header %}
 {% block content %}
-    <script src="{{ url_for('static', path='/add.js') }}"></script>
     <form name="add" action="{{ url_for('feed') }}" method="post">
         <input type="hidden" id="uuid" name="uuid" value="{{ settings.uuid }}"/>
         {% include "add/1_feed_details.html" %}
         <br/>
         {% include "add/2_what_to_send.html" %}
         <br/>
-        {% include "add/3_how_to_send.html" %}
-        <br/>
         {% include "add/4_embed_settings.html" %}
         <br/>
         {% include "add/5_send_link.html" %}
         <br/>
+        {% include "add/send_text.html" %}
+        <br/>
         {% include "add/6_translate.html" %}
         <br/>
         {% include "add/8_other.html" %}
+        <br/>
         <div class="d-md-flex">
             <button class="btn btn-dark btn-sm">Add feed</button>
         </div>
