--- a/discord_twitter_webhooks/templates/add/5_send_link.html
+++ b/discord_twitter_webhooks/templates/add/5_send_link.html
@@ -1,5 +1,20 @@
 <div class="p-2 border border-dark" id="link_settings">
     <h3>Send link settings</h3>
+    {# Send only link #}
+    <div class="form-check form-switch">
+        <label class="form-check-label" for="send_as_link">Send as a link?</label>
+        <input class="form-check-input"
+               type="checkbox"
+               role="switch"
+               name="send_as_link"
+               id="send_as_link"
+               {% if settings.send_as_link %}checked{% endif %}
+               value="True"/>
+        <div id="send_as_link_help" class="form-text">
+            Do you want the tweet to be sent as a link?
+        </div>
+    </div>
+
     {# Send link preview #}
     <div class="form-check form-switch">
         <label class="form-check-label" for="send_as_link_preview">Send link preview</label>
@@ -13,56 +28,6 @@
         />
         <div id="send_as_link_preview_help" class="form-text">
             Whether or not you want the link to have a preview.
-        </div>
-    </div>
-
-    {# Make text a link #}
-    <div class="form-check form-switch">
-        <input
-                class="form-check-input"
-                type="checkbox"
-                role="switch"
-                id="send_as_text_link"
-                name="send_as_text_link"
-                {% if settings.send_as_text_link %}checked{% endif %}
-        />
-        <label class="form-check-label" for="send_as_text_link">Make text a link</label>
-        <div id="send_as_text_link_help" class="form-text">
-            Whether or not you want the text to be a link.
-        </div>
-    </div>
-
-    {# Make text a link preview #}
-    <div class="form-check form-switch">
-        <input
-                class="form-check-input"
-                type="checkbox"
-                role="switch"
-                id="send_as_text_link_preview"
-                name="send_as_text_link_preview"
-                {% if settings.send_as_text_link_preview %}checked{% endif %}
-        />
-        <label class="form-check-label" for="send_as_text_link_preview">Should the link make a preview in
-            Discord?</label>
-        <div id="send_as_text_link_preview_help" class="form-text">
-            Should the link make a preview in Discord?
-        </div>
-    </div>
-
-    {# Custom URL #}
-    <div class="row pb-2">
-        <label for="send_as_text_link_url" class="col-sm-1 col-form-label">Custom URL</label>
-        <div class="col-sm-11">
-            <input
-                    name="send_as_text_link_url"
-                    type="text"
-                    class="form-control bg-dark border-dark text-muted"
-                    id="send_as_text_link_url"
-                    {% if settings.send_as_text_link_url %}value="{{ settings.send_as_text_link_url }}"{% endif %}
-            />
-            <div id="send_as_text_link_url_help" class="form-text">
-                The URL to link the text to.
-            </div>
         </div>
     </div>
 </div>
