--- a/discord_twitter_webhooks/templates/add/4_embed_settings.html
+++ b/discord_twitter_webhooks/templates/add/4_embed_settings.html
@@ -1,5 +1,5 @@
 <div class="p-2 border border-dark" id="embed_settings">
-    <h3>Embed Settings</h3>
+    <h3>Send embed</h3>
     <div class="form-check form-switch">
         <label class="form-check-label" for="send_as_embed">Send as embed?</label>
         <input class="form-check-input"
