--- a/discord_twitter_webhooks/templates/add/send_text.html
+++ b/discord_twitter_webhooks/templates/add/send_text.html
@@ -1,5 +1,5 @@
 <div class="p-2 border border-dark" id="link_settings">
-    <h3>Send link settings</h3>
+    <h3>Send as text</h3>
     {# Send text #}
     <div class="form-check form-switch">
         <label class="form-check-label" for="send_as_text">Send as text?</label>
