--- a/discord_twitter_webhooks/templates/feed.html
+++ b/discord_twitter_webhooks/templates/feed.html
@@ -11,6 +11,8 @@
         <br/>
         {% include "add/2_what_to_send.html" %}
         <br/>
+        {% include "add/infobox.html" %}
+        <br/>
         {% include "add/4_embed_settings.html" %}
         <br/>
         {% include "add/5_send_link.html" %}
