--- a/discord_twitter_webhooks/templates/add/5_send_link.html
+++ b/discord_twitter_webhooks/templates/add/5_send_link.html
@@ -1,5 +1,5 @@
 <div class="p-2 border border-dark" id="link_settings">
-    <h3>Send link settings</h3>
+    <h3>Send as link</h3>
     {# Send only link #}
     <div class="form-check form-switch">
         <label class="form-check-label" for="send_as_link">Send as a link?</label>
